# Platform-Libre

./: .gitignore  README.md
backend/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  run_email_worker.py  run_linkedin_worker.py
backend/cookies/: get_cookies.py  linkedin_cookies.json
backend/migrations/: 001_outreach_status.sql  002_campaign_memory.sql  003_linkedin_outreach_status.sql  004_add_cycle_number.sql
backend/src/: main.py
backend/src/agents/: base_agent.py  graph.py  research_supervisor.py
backend/src/agents/domains/: adjacent.py  (+8 more)
backend/src/core/: config.py  llm.py  prompts.py  tools.py
backend/src/db/: database.py  hypotheses.py  linkedin.py  outreach.py
backend/src/queue/: email_producer.py  producer.py
backend/src/rag/: adjacent_signals.py  channel_signals.py  competitor_signals.py  contextual_signals.py  intent_signals.py  market_signals.py  positioning_signals.py  signals.py  winloss_signals.py
backend/src/routes/: analyse.py  history.py  outreach.py  webhooks.py
backend/src/state/: agent_state.py  contracts.py  schemas.py
backend/src/tools/: scraper.py
backend/src/workers/: __init__.py
backend/tests/: debug_selectors.py  debug_voyager.py  email_outreach_test.py  feedbackloop_test.py  test-generator.py  test_intent.py  test_launch_campaign.py  test_linkedin.py  test_linkedin_e2e.py  test_market.py  test_mock_competitive_map.py  test_outreach.py  test_positioning.py  test_redis_queue.py  test_redis_queue_linkedin.py  test_strategic_analysis.py  test_webhook.py  test_winloss.py
backend/ui/: cli.py
(+73 files in other folders)
