[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hackathon-agent"
version = "0.1.0"
description = "Agentic AI pipeline — Veracity Hackathon 2026"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "aiohttp>=3.9.0",
    "httpx>=0.28.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "qdrant-client>=1.9.0",
    "fastembed>=0.3.0",
    "tavily-python>=0.3.0",
    "duckduckgo-search>=6.0.0",
    "sendgrid>=6.11.0",
    "firecrawl-py>=4.19.0",
    "litellm>=1.82.2",
    "aiosqlite>=0.22.1",
    "fal-client>=0.13.2",
    "psycopg[binary]>=3.3.3",
    "psycopg-pool>=3.3.0",
    "langgraph-checkpoint-postgres>=3.0.5",
    "sqlalchemy>=2.0.49",
    "asyncpg>=0.31.0",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.3",
    "beautifulsoup4>=4.14.3",
    "arq>=0.27.0",
    "redis>=5.3.1",
    "browser-use>=0.12.6",
    "langchain-openai>=1.1.9",
    "resend>=2.28.0",
    "svix>=1.90.0",
    "ddgs>=9.14.0",
    "pytest>=9.0.3",
]

[project.optional-dependencies]
docling = [
    "docling>=2.0.0",
]

dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ipykernel",
    "jupyter",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

